<resources>
	<string name="CC_Setting_LowLatencyMode">Low Latency Mode</string>
	<string name="CC_Setting_LowLatencyModeDetail">Turning on the low latency mode will greatly reduce the latency of videos and Games, but it may increase the risk of compatibility. Please try to avoid turning this mode on and off while playing.</string>
	<string name="CC_Setting_PowerSaving">Morpheus STB power saving optimization</string>
	<string name="CC_Setting_PowerSavingDetail">Turning on power saving optimization helps to extend the battery life, but may slightly affect the call audio quality.</string>
	<string name="CC_Setting_Quanchaozuo">Full controls mode</string>
	<string name="CC_Setting_QuanchaozuoDetail">The default is the standard mode (double-touch to play/pause, answer/hang up). After turning on the full controls mode, the left and right earphones can control the volume and the upper and lower headphone respectively.</string>
	<string name="CC_Setting_dsp">DSP sound quality enhancement</string>
	<string name="CC_Setting_dspDetail">After turning it on, it will help improve the resolution of music and improve the sense of hearing, but there may be some slightly amplified noise of the sound source.</string>
	<string name="CC_Setting_eq">Custom EQ Settings</string>
	<string name="T1X_Home_ClickSearch">Click to search</string>
	<string name="T1X_Home_Distance">Distance</string>
	<string name="T1X_Home_Searching">Searching…</string>
	<string name="T1X_Home_SelectHeadset">Select headset</string>
	<string name="T1X_MoreSetting_ResumeSynchronization">Recover L-R Sync.</string>
	<string name="T1X_MoreSetting_ResumeSynchronizationPrompt">Recover Sync will restart headsets, if issue still exists, you may need to manually sync.</string>
	<string name="T1X_MoreSetting_cancel">Cancel</string>
	<string name="T1X_MoreSetting_confirm">OK</string>
	<string name="T1X_MoreSetting_remind">Reminders</string>
	<string name="T1X_MoreSetting_remind_detail">This will reset all settings. But paired information won</string>
	<string name="T1X_Setting_EasyMode">Easy Mode</string>
	<string name="T1X_Setting_EasyModeDetail">Easy mode will limit touch operations to double-click (play/pause, answer/end call) and medium press to activate the voice assistant</string>
	<string name="T1X_Setting_HighlySensitiveTouchDetail">High touch sensitivity will respond more quickly to touch operations, but may increase misuse</string>
	<string name="T1X_Setting_HighlySensitiveTouchLeftEar">High Sensitivity Touch (L)</string>
	<string name="T1X_Setting_HighlySensitiveTouchRightEar">High Sensitivity Touch (R)</string>
	<string name="T1X_Setting_LatestVersion">Firmware is up to date</string>
	<string name="T1X_Setting_LowLatencyMode">Low Latency Mode</string>
	<string name="T1X_Setting_LowLatencyModeDetail">Low latency mode will reduce the playback delay of video/Game, but may increase the compatibility risk. Please do not enable LL mode when playing and headsets need restart to take effective.</string>
	<string name="T1X_Setting_unconnect">Not connected</string>
	<string name="T1X_Style_MoreSoundEffects">More EQ</string>
	<string name="T1X_Style_SoundEffect1">Classic</string>
	<string name="T1X_Style_SoundEffect10">Electronic</string>
	<string name="T1X_Style_SoundEffect11">Soft Bass</string>
	<string name="T1X_Style_SoundEffect12">New Age</string>
	<string name="T1X_Style_SoundEffect2">Jazz</string>
	<string name="T1X_Style_SoundEffect3">Light music</string>
	<string name="T1X_Style_SoundEffect4">House</string>
	<string name="T1X_Style_SoundEffect5">Metal</string>
	<string name="T1X_Style_SoundEffect6">Pop music</string>
	<string name="T1X_Style_SoundEffect7">R&amp;B</string>
	<string name="T1X_Style_SoundEffect8">Dance</string>
	<string name="T1X_Style_SoundEffect9">Rock</string>
	<string name="T1X_Toast1">checking Bluetooth status</string>
	<string name="T1X_Toast2">connection failed</string>
	<string name="T1X_Toast3">left earbud disconnected</string>
	<string name="T1X_Toast4">right earbud disconnected</string>
	<string name="T1X_Toast5">Automatic connection…</string>
	<string name="UMAppUpdate">App updating</string>
	<string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
	<string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
	<string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
	<string name="UMIgnore">Ingore this</string>
	<string name="UMNewVersion">Latest version:</string>
	<string name="UMNotNow">Not now</string>
	<string name="UMTargetSize">Target size:</string>
	<string name="UMToast_IsUpdating">Updating....</string>
	<string name="UMUpdateCheck">2.6.0.1.20150312</string>
	<string name="UMUpdateContent">Update Content</string>
	<string name="UMUpdateNow">Update now</string>
	<string name="UMUpdateSize">Update size:</string>
	<string name="UMUpdateTitle">New version found</string>
	<string name="XS_Setting_WearSensor">Wear Sensor</string>
	<string name="XS_Setting_WearSensorDetail">After the wearing sensor is turned on, the playback will be paused when the earplugs are removed, and the music playback will resume when the earplugs are put on.</string>
	<string name="abc_action_bar_home_description">Navigate home</string>
	<string name="abc_action_bar_up_description">Navigate up</string>
	<string name="abc_action_menu_overflow_description">More options</string>
	<string name="abc_action_mode_done">Done</string>
	<string name="abc_activity_chooser_view_see_all">See all</string>
	<string name="abc_activitychooserview_choose_application">Choose an app</string>
	<string name="abc_capital_off">OFF</string>
	<string name="abc_capital_on">ON</string>
	<string name="abc_font_family_body_1_material">sans-serif</string>
	<string name="abc_font_family_body_2_material">sans-serif-medium</string>
	<string name="abc_font_family_button_material">sans-serif-medium</string>
	<string name="abc_font_family_caption_material">sans-serif</string>
	<string name="abc_font_family_display_1_material">sans-serif</string>
	<string name="abc_font_family_display_2_material">sans-serif</string>
	<string name="abc_font_family_display_3_material">sans-serif</string>
	<string name="abc_font_family_display_4_material">sans-serif-light</string>
	<string name="abc_font_family_headline_material">sans-serif</string>
	<string name="abc_font_family_menu_material">sans-serif</string>
	<string name="abc_font_family_subhead_material">sans-serif</string>
	<string name="abc_font_family_title_material">sans-serif-medium</string>
	<string name="abc_menu_alt_shortcut_label">Alt+</string>
	<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
	<string name="abc_menu_delete_shortcut_label">delete</string>
	<string name="abc_menu_enter_shortcut_label">enter</string>
	<string name="abc_menu_function_shortcut_label">Function+</string>
	<string name="abc_menu_meta_shortcut_label">Meta+</string>
	<string name="abc_menu_shift_shortcut_label">Shift+</string>
	<string name="abc_menu_space_shortcut_label">space</string>
	<string name="abc_menu_sym_shortcut_label">Sym+</string>
	<string name="abc_prepend_shortcut_label">Menu+</string>
	<string name="abc_search_hint">Search…</string>
	<string name="abc_searchview_description_clear">Clear query</string>
	<string name="abc_searchview_description_query">Search query</string>
	<string name="abc_searchview_description_search">Search</string>
	<string name="abc_searchview_description_submit">Submit query</string>
	<string name="abc_searchview_description_voice">Voice search</string>
	<string name="abc_shareactionprovider_share_with">Share with</string>
	<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
	<string name="abc_toolbar_collapse_description">Collapse</string>
	<string name="about"/>
	<string name="about_agreement_title">Terms of Service</string>
	<string name="about_duer_notsupport">Not available</string>
	<string name="about_duer_title">Voice Search Settings</string>
	<string name="about_fill">About fiil+</string>
	<string name="about_search_language">Language Recognition</string>
	<string name="about_search_online">Search</string>
	<string name="about_search_quality">Music Quality of Search Results</string>
	<string name="about_search_quea">Play sound quality</string>
	<string name="about_search_stop">Complete playing</string>
	<string name="about_search_tittle">Voice search settings</string>
	<string name="about_use_liuliang_linstenr">Play using 2G/3G/4G data</string>
	<string name="about_voice_assistant">Voice Assistant</string>
	<string name="access_page_location">Get location info</string>
	<string name="access_page_need">To ensure normal use of FIIL+, the following permissions are required</string>
	<string name="access_page_phone">Get device info</string>
	<string name="access_page_storage">Access on storage</string>
	<string name="access_page_use">Use FIIL+ now</string>
	<string name="action_feedback">Feedback</string>
	<string name="action_new_conversation">New Conversation</string>
	<string name="action_settings">Settings</string>
	<string name="burnstart_okbtn">Stop and Quit</string>
	<string name="burnstart_stopmes">Burn-in has not finish yet, but the process will be saved automatically.</string>
	<string name="burnstart_stoptittle">Stop Burn-in?</string>
	<string name="burntime_fri">F</string>
	<string name="burntime_mon">M</string>
	<string name="burntime_sat">S</string>
	<string name="burntime_save">Save</string>
	<string name="burntime_setday">Repeat</string>
	<string name="burntime_settime">Time</string>
	<string name="burntime_sun">S</string>
	<string name="burntime_thu">T</string>
	<string name="burntime_tue">T</string>
	<string name="burntime_wed">W</string>
	<string name="cancel">Cancel</string>
	<string name="close">Off</string>
	<string name="fiil_temp_color">FIIL Light Color</string>
	<string name="fiil_temp_set">FIIL Light Switch</string>
	<string name="heatset_reset">"This will reset all settings. But paired information won't be deleted."</string>
	<string name="i_dont_konw">Disconnect</string>
	<string name="moreset_aptx">aptX Audio</string>
	<string name="moreset_auto">Automatic Shutdown Time</string>
	<string name="moreset_heartwear">How to wear</string>
	<string name="moreset_hint">Touch Tone</string>
	<string name="moreset_language">Voice Prompt</string>
	<string name="moreset_light">FIIL Light</string>
	<string name="moreset_maf">Smart Sensor</string>
	<string name="moreset_records">Recording in Necklace Mode</string>
	<string name="moreset_reset">Reset Settings</string>
	<string name="moreset_search">Voice Trigger</string>
	<string name="moreset_voice">HD Voice</string>
	<string name="music_home_down">Download</string>
	<string name="music_home_list">Charts</string>
	<string name="music_home_media">Phone Storage</string>
	<string name="music_home_storage">Built-in Storage</string>
	<string name="ok">OK</string>
	<string name="resting_attention">Attention!</string>
	<string name="resting_heart1">Your resting heart rate is measured in beats per minute when you are awake but in a quiet, inactive state.</string>
	<string name="resting_heart2">"From a clinical perspective, the lower your resting heart rate, the healthier your heart. Individuals with a faster resting heart rate have a much greater chance of coronary heart disease, high blood pressure, sudden cardiac death, and other cardiovascular risks than those with a lower resting heart rate.
 Checking your resting heart rate long term can help you to measure your fitness results."</string>
	<string name="resting_heart3">"Start testing once you have rested sufficiently and have not ingested any medicine, alcohol, or coffee.
 The optimal time for testing is early in the morning when you have just woken up, within 5 minutes of getting up when you are lying still."</string>
	<string name="resting_text">Recommendations</string>
	<string name="warm">Warning</string>
</resources>