<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="@drawable/shape_heart_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip">
        <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip">
                <TextView android:id="@id/tv_heart1" android:text="@string/resting_heart1" style="@style/TextView_Heart_Measurement" />
                <ImageView android:id="@id/iv_heart_all" android:background="@mipmap/heart_resting_rate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" />
                <TextView android:id="@id/tv_heart2" android:layout_marginTop="15.0dip" android:text="@string/resting_heart2" style="@style/TextView_Heart_Measurement" />
                <TextView android:textSize="22.0sp" android:textColor="#ff565656" android:id="@id/tv_heart_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/resting_text" android:lineSpacingExtra="6.0dip" />
                <TextView android:id="@id/tv_heart3" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/resting_heart3" style="@style/TextView_Heart_Measurement" />
                <TextView android:textSize="22.0sp" android:textColor="#ff565656" android:id="@id/tv_heart_attention" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resting_attention" android:lineSpacingExtra="6.0dip" />
                <TextView android:id="@id/tv_heart4" android:visibility="gone" android:layout_marginBottom="15.0dip" android:text="@string/resting_heart3" style="@style/TextView_Heart_Measurement" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>