<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/android/skin">
    <TextView android:textSize="18.0sp" android:textColor="@color/dialog_tittle" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/burnstart_stoptittle" />
    <TextView android:textSize="15.0sp" android:layout_gravity="center_horizontal" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/burnstart_stopmes" />
    <View android:background="@color/burn_top_name_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textSize="18.0sp" android:textColor="@color/gray" android:id="@id/burn_creat_cancel" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" />
        <View android:background="@color/burn_top_name_line" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <Button android:textSize="18.0sp" android:textColor="@color/colorPrimary" android:id="@id/burn_creat_ok" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/burnstart_okbtn" android:layout_weight="1.0" android:textAllCaps="false" skin:enable="true" />
    </LinearLayout>
</LinearLayout>