<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/color_f8f8f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/activity_head_black" />
        <View android:background="@color/color_line_dede" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/ll_moreset" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/rl_synchronization" android:visibility="gone" android:layout_marginBottom="5.0dip" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:textColor="#ff565656" android:text="@string/T1X_MoreSetting_ResumeSynchronization" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_synchronization_arrow" style="@style/ImageView_MoreFragment_Arrow" />
                    <TextView android:textSize="16.0sp" android:textColor="#ff999999" android:id="@id/tv_synchronization" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_alignRight="@id/iv_synchronization_arrow" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_light" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_light" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_light" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_light" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_sport_led" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/fiil_temp_set" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_moreset_sport_led" style="@style/ImageView_MoreFragment_Arrow" />
                    <TextView android:textSize="16.0sp" android:id="@id/tv_moreset_sport_led" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/close" android:layout_alignRight="@id/iv_moreset_sport_led" android:layout_centerVertical="true" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_sport_led_color" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/fiil_temp_color" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_moreset_sport_led_color_arrow" style="@style/ImageView_MoreFragment_Arrow" />
                    <TextView android:textSize="16.0sp" android:id="@id/tv_moreset_sport_led_color" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/i_dont_konw" android:layout_alignRight="@id/iv_moreset_sport_led_color_arrow" android:layout_centerVertical="true" />
                    <ImageView android:id="@id/iv_moreset_sport_led_color" android:layout_width="17.0dip" android:layout_height="23.0dip" android:layout_marginRight="10.0dip" android:layout_alignRight="@id/iv_moreset_sport_led_color_arrow" android:layout_centerVertical="true" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_heartwear" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_heartwear" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_moreset_heartwear" style="@style/ImageView_MoreFragment_Arrow" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_search" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_search" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_search" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_search" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_records" android:visibility="gone" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_records" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_records" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_records" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_wear" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_maf" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_wear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_wear" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_hint" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_hint" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_hint" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_hint" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_aptx" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_aptx" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_aptx" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_aptx" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_voice" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_voice" style="@style/TextView_MoreSetting_Little" />
                    <FrameLayout android:id="@id/fl_moreset_voice" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
                        <ImageView android:id="@id/iv_moreset_voice" android:background="@drawable/selector_btn_state" style="@style/ImageView_MoreFragment" />
                    </FrameLayout>
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_language" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_language" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_moreset_language" style="@style/ImageView_MoreFragment_Arrow" />
                    <TextView android:id="@id/tv_moreset_language" android:text="@string/close" android:layout_alignRight="@id/iv_moreset_language" style="@style/TextView_MusicSetting_Little" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_auto" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_auto" style="@style/TextView_MoreSetting_Little" />
                    <ImageView android:id="@id/iv_moreset_auto" style="@style/ImageView_MoreFragment_Arrow" />
                    <TextView android:id="@id/tv_moreset_auto" android:layout_alignRight="@id/iv_moreset_auto" style="@style/TextView_MusicSetting_Little" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_moreset_reset" style="@style/RelativeLayout_MoreSetting">
                    <TextView android:text="@string/moreset_reset" style="@style/TextView_MoreSetting_Little" />
                    <include layout="@layout/view_line_bottom" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>