<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_music_home_storage" android:visibility="gone" style="@style/LinearLayout_music_home">
            <ImageView android:background="@mipmap/iv_music_storage" style="@style/Button_music_home" />
            <TextView android:text="@string/music_home_storage" style="@style/TextView_music_home" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_music_home_media" style="@style/LinearLayout_music_home_three">
            <ImageView android:background="@mipmap/iv_music_media" style="@style/Button_music_home" />
            <TextView android:text="@string/music_home_media" style="@style/TextView_music_home" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_music_home_down" style="@style/LinearLayout_music_home_three">
            <ImageView android:background="@mipmap/iv_music_down" style="@style/Button_music_home" />
            <TextView android:text="@string/music_home_down" style="@style/TextView_music_home" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_music_home_list" style="@style/LinearLayout_music_home_three">
            <ImageView android:background="@mipmap/iv_music_list" style="@style/Button_music_home" />
            <TextView android:text="@string/music_home_list" style="@style/TextView_music_home" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>